# matchina

./: .gitignore  .justfile  Cargo.toml  DESIGN.md  README.md  rustfmt.toml
.github/workflows/: audit.yml  rust.yml  security.yml
benches/: processor.rs
src/: engine.rs  lib.rs  main.rs  order.rs  orderbook.rs  policy.rs  summary.rs  trade.rs  watcher.rs
tests/: exchange.rs
