[package]
name = "merx"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Minimalistic matching engine designed for a crypto exchange"
readme = "./README.md"
documentation = "https://docs.rs/merx-rx"
repository = "https://github.com/frank-lpz/merx-rs"
keywords = ["matching-engine"]
categories = ["crypto", "finance", "trading"]
rust-version = "1.77.0"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
compact_str = { version = "0.7.1", features = ["serde"] }
core_affinity = "0.8.1"
crossbeam-channel = "0.5.8"
indexmap = "2.2.6"
num = "0.4.1"
rand = "0.8.5"
rust_decimal = "1.32.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0" }
thiserror = "~1.0"
tracing = "0.1.37"
tracing-appender = { version = "0.2.2", features = ["parking_lot"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json", "parking_lot"] }

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"
tap = "1.0.1"

[[bin]]
name = "generator"

[[bench]]
name = "processor"
harness = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
panic = "abort"
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
overflow-checks = false
rpath = false
lto = "thin"
codegen-units = 1
